--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="skills">
                 <h3>技能專長</h3>
                 <ul>
-                    <p>java, spring boot, git, jenkins, Apache solr, PostgreSQL, GCP Big Query, ELK</p>
+                    <p>java, spring boot, python, pytorch, git, jenkins, Apache solr, PostgreSQL, GCP Big Query, ELK</p>
                     <!-- 添加更多技能 -->
                 </ul>
             </div>
